--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./backend/server.js"
+    "dev": "NODE_ENV=development nodemon ./backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "NODE_ENV=production node ./backend/server.js"
   },
   "type": "module",
   "keywords": [],
@@ -13,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-openid-connect": "^2.17.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.4"
   },
