--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
+    "auth0": "^4.16.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-openid-connect": "^2.17.1",
