--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
