--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.471.2",
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.3.1",
+    "react-animated-numbers": "^1.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
