--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.21.2",
     "express-openid-connect": "^2.17.1",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.4"
+    "mongoose": "^8.9.4",
+    "react-animated-numbers": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
