--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@radix-ui/react-toggle": "^1.1.6",
     "auth0": "^4.16.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
