--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "framer-motion": "^11.18.1",
     "lucide-react": "^0.471.2",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.9.1",
     "react": "^18.3.1",
     "react-animated-numbers": "^1.0.0",
     "react-day-picker": "^8.10.1",
