--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@floating-ui/react": "^0.27.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
-    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.5",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.2.0",
@@ -49,6 +49,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "firebase": "^11.6.1",
     "framer-motion": "^11.18.1",
     "lucide-react": "^0.471.2",
     "mini-svg-data-uri": "^1.4.4",
