--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-openid-connect": "^2.17.1",
+    "firebase": "^11.6.1",
+    "firebase-admin": "^13.3.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.4",
     "react-animated-numbers": "^1.0.0"
