--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-openid-connect": "^2.17.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.4",
+    "nanoid": "^5.1.5",
     "react-animated-numbers": "^1.0.0"
   },
   "devDependencies": {
